Fri May  9 21:37:04 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/transport/framework/TransportImpl.cpp:

          Making sure the ReactorTask doesn't get destroyed till everything else is shutdown.

        * dds/DCPS/transport/simpleUnreliableDgram/SimpleUnreliableDgramTransport.cpp:

          Making sure the ReactorTask isn't destroyed till the socket is destroyed.

        * dds/InfoRepo/DCPSInfo_i.cpp:

          This code went in to fix a memory leak, but exercises infrastructure code that 
          isn't valid while we are going down.  Removing the code since currently this is
          only at shutdown.

Fri May  9 15:15:29 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:

          Unlock the sample_lock_ during callbacks to the data reader
          (or subscriber) listener.

Fri May  9 00:16:55 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/ReliableMulticast/ReliableMulticastTransportConfiguration.inl:
        * dds/DCPS/transport/simpleUnreliableDgram/SimpleMcastConfiguration.inl:

          Used ACE_DEFAULT_MULTICASTV6_ADDR as default multicast IPv6 address.

        * dds/DCPS/transport/framework/DataLink.cpp:

          Fixed an access violation in exist() method.

        * tests/DCPS/BuiltInTopic/common.cpp:
        * tests/DCPS/CompatibilityTest/publisher.cpp:
        * tests/DCPS/FooTest4_0/Reader.cpp:
        * tests/DCPS/FooTest4_0/Writer.cpp:
        * tests/DCPS/FooTest5/common.h:
        * tests/DCPS/FooTest5/common.cpp:
        * tests/DCPS/FooTest5/subscriber.cpp:
        * tests/DCPS/FooTest5_0/main.cpp:
        * tests/DCPS/LivelinessTest/publisher.cpp:
        * tests/DCPS/LivelinessTest/subscriber.cpp:
        * tests/DCPS/LivelinessTimeout/publisher.cpp:
        * tests/DCPS/MultiDPTest/publisher.cpp:
        * tests/DCPS/MultiTopicTest/publisher.cpp: